# LegacyBookingCoordinator.py

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/legacy_booking/: __init__.py  audit_logger.py  audit_logger_impl.py  booking.py  booking_coordinator_impl.py  booking_repository.py  booking_repository_impl.py  can_not_use_in_tests_exception.py  flight_availability_service.py  flight_availability_service_impl.py  partner_notifier.py  partner_notifier_impl.py  pricing_engine.py
tests/: TestBookingCoordinator.test_book_flight_should_create_booking_successfully.approved.txt  __init__.py  test_booking_coordinator.py
