[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legacy-booking-coordinator"
version = "1.0.0"
description = "Code Kata: Legacy Flight Booking System Testing"
readme = "README.md"
authors = [{name = "Legacy Systems Inc", email = "support@legacysystems.com"}]
license = {text = "MIT"}
keywords = ["kata", "legacy", "testing", "approval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "specrec-python @ file:///Users/ivett/Documents/git/specrec/specrec-python",
]

[project.optional-dependencies]
test = [
    "approvaltests>=11.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/legacy-systems/booking-coordinator"
Repository = "https://github.com/legacy-systems/booking-coordinator.git"
Issues = "https://github.com/legacy-systems/booking-coordinator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/legacy_booking"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/legacy_booking --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/legacy_booking"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]